We're supposed to return the start position of the preedit, not the text cursor

Please test, and if it's correct I'll backport it.

BUG:164428

svn path=/trunk/KDE/kdelibs/kate/; revision=823329